# forge

./: .gitignore  Cargo.toml  LICENSE-MIT  PUBLISH-REVIEW.md  README.md  docker-compose.yml
.claude/: REFACTOR_LOG.md
.claude/skills/: correctness-review.md  feature-planning.md  refactor-pass.md  vet-dependency.md
.github/workflows/: ci.yml
bench/: .gitignore  README.md  docker-compose.bench.yml  forge.Dockerfile  measure.sh  probe.rb  sidekiq-entrypoint.sh  sidekiq.Dockerfile  throughput.rb  worker.rb
bench/solidq_app/: Dockerfile  Gemfile  solidq-entrypoint.sh  solidq_probe.rb  solidq_throughput.rb
bench/solidq_app/app/jobs/: latency_job.rb
bench/solidq_app/app/views/layouts/: application.html.erb
bench/solidq_app/app/views/pwa/: manifest.json.erb
bench/solidq_app/config/: application.rb  credentials.yml.enc  database.yml  master.key  queue.yml
crates/forge-charts/: Cargo.toml  LICENSE-APACHE  README.md
crates/forge-charts/examples/: basic.rs
crates/forge-charts/src/: axis.rs  chart.rs  charts.css  hover.rs  lib.rs  path.rs  scale.rs  series.rs  zoom.rs
crates/forge-jobs/: Cargo.toml  README.md
crates/forge-jobs-api/: Cargo.toml  README.md
crates/forge-jobs-api/src/: dto.rs  error.rs  handlers.rs  lib.rs  metrics.rs  router.rs  series.rs
crates/forge-jobs-api/tests/: cron_dedupe.rs  metrics_render.rs
crates/forge-jobs-ui/: Cargo.toml  README.md
crates/forge-jobs-ui/src/: bulk_actions.rs  chart_fmt.rs  confirm.rs  cron.rs  db_health.rs  failed.rs  http.rs  inspector.rs  ipc.rs  job_table.rs  lib.rs  overview.rs  panel.css  per_queue.rs  queue_root.rs  resources.rs  scheduled.rs  timeline.rs  workers.rs
crates/forge-jobs/benches/: queue_ops.rs
crates/forge-jobs/examples/: minimal.rs
crates/forge-jobs/src/: clock.rs  cron_expr.rs  error.rs  job.rs  lib.rs  runtime.rs  scheduler.rs  storage.rs  store.rs
crates/forge-jobs/src/runtime/: cmd_exec.rs  cron.rs  demo.rs  handler.rs  metrics.rs  rate_limit.rs  rebalance.rs  retry.rs  routing.rs  worker_pool.rs
crates/forge-jobs/src/storage/: database_config.rs  db_timing.rs  error.rs  event_buffer.rs  paths.rs  postgres.rs  retry.rs  sqlite.rs  types.rs
crates/forge-jobs/src/storage/postgres/migrations/: 20260526000001_initial.sql  20260526000002_fifo_claim_index.sql  20260526000003_backoff_config.sql  20260526000004_queue_throttle_state.sql  20260526000005_cron_leader.sql  20260526000006_pod_slots.sql  20260526000007_dedupe_unique.sql  20260527000001_metric_bucket.sql  20260601000001_cancel_requested_at.sql  20260603000001_rate_limit_state.sql  20260610000001_scale_storage_tuning.sql  20260610000002_claim_ready_index.sql  20260613000001_add_dedupe_key_to_cron.sql  20260613000002_add_worker_identity_to_pod.sql
crates/forge-jobs/src/storage/sqlite/: cron.rs  jobs.rs  notify.rs  procs.rs  queue_config.rs  rate_limit.rs
crates/forge-jobs/src/storage/sqlite/migrations/: 20260524000001_initial.sql  20260525000001_queue_event.sql  20260525000002_queue_event_retried_and_job_id.sql  20260525000003_cleanup_aged_index.sql  20260526000001_fifo_claim_index.sql  20260526000002_backoff_config.sql  20260526000003_queue_throttle_state.sql  20260526000004_cron_leader.sql  20260526000005_pod_slots.sql  20260526000006_dedupe_unique.sql  20260527000001_metric_bucket.sql  20260601000001_cancel_requested_at.sql  20260603000001_rate_limit_state.sql  20260610000002_claim_ready_index.sql  20260613000002_add_worker_identity_to_pod.sql
crates/forge-jobs/tests/: postgres_storage_smoke.rs  runtime_cancel.rs  runtime_cleanup.rs  runtime_cron.rs  runtime_end_to_end.rs  runtime_queue_affinity.rs  runtime_reaper.rs  runtime_rebalance.rs  sqlite_storage_smoke.rs
docs/: benchmarks.md  forge-jobs-review.md  operating-at-scale.md
