[package]
name = "forge-jobs-ui"
version = "0.1.0"
authors = ["Daniel Laloush <dandush03@users.noreply.github.com>"]
edition = "2024"
rust-version = "1.92"
description = "Reusable Leptos CSR panel for the forge-jobs queue. Overview, timeline, cron, scheduled-jobs, dead-letter inspector — host-agnostic via a consumer-implemented QueueIpc trait."
license = "MIT OR Apache-2.0"
repository = "https://github.com/dandush03/forge"
readme = "README.md"
keywords = ["leptos", "queue", "jobs", "dashboard", "wasm"]
categories = ["web-programming", "wasm", "asynchronous"]
publish = true

[dependencies]
leptos        = { version = "0.8", features = ["csr"] }
chrono        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
async-trait   = { workspace = true }
wasm-bindgen  = "0.2"
web-sys       = { version = "0.3", features = ["Window", "Navigator"] }
forge-charts = { path = "../forge-charts", version = "0.1" }

[lints]
workspace = true
