[package]
name = "forge-jobs-ui"
version = "0.1.0"
authors = ["Daniel Laloush <dandush03@users.noreply.github.com>"]
edition = "2024"
rust-version = "1.92"
description = "Reusable Leptos CSR panel for the forge-jobs queue. Overview, timeline, cron, scheduled-jobs, dead-letter inspector — host-agnostic via a consumer-implemented QueueIpc trait."
license = "MIT OR Apache-2.0"
repository = "https://github.com/dandush03/forge"
readme = "README.md"
keywords = ["leptos", "queue", "jobs", "dashboard", "wasm"]
categories = ["web-programming", "wasm", "asynchronous"]
publish = true

[dependencies]
leptos        = { version = "0.8", features = ["csr"] }
chrono        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
async-trait   = { workspace = true }
wasm-bindgen  = "0.2"
web-sys       = { version = "0.3", features = ["Window", "Navigator"] }
forge-charts = { path = "../forge-charts", version = "0.1" }
# `http` feature only: a ready-made HTTP `QueueIpc` (browser / webview
# `fetch`) that talks to a `forge-jobs-api` server. Off by default so
# the base panel stays transport-agnostic.
gloo-net      = { version = "0.6", optional = true, default-features = false, features = ["http", "json"] }

[features]
# Bundles `HttpQueueIpc` — a drop-in `QueueIpc` over HTTP for hosts that
# serve the panel from a `forge-jobs-api` server (the web case; Tauri can
# reuse it too, pointed at the same server).
http = ["dep:gloo-net"]

[lints]
workspace = true
